markdown/security/6.2.7/features/exploits/http.md
---
title: "HTTP"
source: "ROOT:features/exploits/http.adoc"
---

<a id="http"></a>

# HTTP

All HTTP-based communication, including [static resources](https://www.troyhunt.com/heres-why-your-static-website-needs-https/), should be protected by [using TLS](https://cheatsheetseries.owasp.org/cheatsheets/Transport_Layer_Protection_Cheat_Sheet.html).

As a framework, Spring Security does not handle HTTP connections and thus does not provide support for HTTPS directly.
However, it does provide a number of features that help with HTTPS usage.

<a id="http-redirect"></a>

## Redirect to HTTPS

When a client uses HTTP, you can configure Spring Security to redirect to HTTPS in both [Servlet](../../servlet/exploits/http.md#servlet-http-redirect) and [WebFlux](../../reactive/exploits/http.md#webflux-http-redirect) environments.

<a id="http-hsts"></a>

## Strict Transport Security

Spring Security provides support for [Strict Transport Security](headers.md#headers-hsts) and enables it by default.

<a id="http-proxy-server"></a>

## Proxy Server Configuration

When using a proxy server, it is important to ensure that you have configured your application properly.
For example, many applications have a load balancer that responds to request for `https://example.com/` by forwarding the request to an application server at `https://192.168.0.107`
Without proper configuration, the application server can not know that the load balancer exists and treats the request as though `https://192.168.0.107:8080` was requested by the client.

To fix this, you can use [RFC 7239](https://tools.ietf.org/html/rfc7239) to specify that a load balancer is being used.
To make the application aware of this, you need to configure your application server to be aware of the X-Forwarded headers.
For example, Tomcat uses [`RemoteIpValve`](https://tomcat.apache.org/tomcat-10.1-doc/api/org/apache/catalina/valves/RemoteIpValve.html) and Jetty uses [`ForwardedRequestCustomizer`](https://eclipse.dev/jetty/javadoc/jetty-11/org/eclipse/jetty/server/ForwardedRequestCustomizer.html).
Alternatively, Spring users can use [`ForwardedHeaderFilter`](https://docs.spring.io/spring-framework/reference/web/webmvc/filters.html#filters-forwarded-headers) with the Servlet stack or [`ForwardedHeaderTransformer`](https://docs.spring.io/spring-framework/reference/web/webflux/reactive-spring.html#webflux-forwarded-headers) with the Reactive stack.

Spring Boot users can use the `server.forward-headers-strategy` property to configure the application.
See the [Spring Boot documentation](https://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#howto.webserver.use-behind-a-proxy-server) for further details.
