markdown/security/7.0.7/features/exploits/http.md
---
title: "HTTP"
source: "ROOT:features/exploits/http.adoc"
---

<a id="http"></a>

# HTTP

All HTTP-based communication, including [static resources](https://www.troyhunt.com/heres-why-your-static-website-needs-https/), should be protected by [using TLS](https://cheatsheetseries.owasp.org/cheatsheets/Transport_Layer_Protection_Cheat_Sheet.html).

As a framework, Spring Security does not handle HTTP connections and thus does not provide support for HTTPS directly.
However, it does provide a number of features that help with HTTPS usage.

<a id="http-redirect"></a>

## Redirect to HTTPS

When a client uses HTTP, you can configure Spring Security to redirect to HTTPS in both [Servlet](../../servlet/exploits/http.md#servlet-http-redirect) and [WebFlux](../../reactive/exploits/http.md#webflux-http-redirect) environments.

<a id="http-hsts"></a>

## Strict Transport Security

Spring Security provides support for [Strict Transport Security](headers.md#headers-hsts) and enables it by default.

<a id="http-proxy-server"></a>

## Proxy Server Configuration

When using a proxy server, it is important to ensure that you have configured your application properly.
For example, many applications have a load balancer that responds to request for `https://example.com/` by forwarding the request to an application server at `https://192.168.0.107`
Without proper configuration, the application server can not know that the load balancer exists and treats the request as though `https://192.168.0.107:8080` was requested by the client.

To fix this, the proxy needs to pass on the details of the original request, and the application needs to be configured to use them.
Two kinds of headers are used for this, and it is important to know which of them applies in your deployment:

- The standard `Forwarded` header, defined by [RFC 7239](https://tools.ietf.org/html/rfc7239), which carries the original host, protocol, and client in a single header.
- The non-standard `X-Forwarded-*` headers, such as `X-Forwarded-Host`, `X-Forwarded-Proto`, and `X-Forwarded-For`, which predate RFC 7239.

Most proxies still send the `X-Forwarded-*` headers rather than the standard `Forwarded` header, while Spring Framework and servers such as Reactor Netty and Jetty understand both.
Do not assume that only one of them is in use.

> [!NOTE]
> Both kinds of headers are supplied by the client unless a proxy overwrites them, so an application that trusts them without a trusted proxy in front of it can be made to believe a request arrived over a different host, protocol, or client address than it really did.

For this reason, the proxy at the edge of your network must be configured to remove or overwrite any forwarded headers that arrive from the outside, for *both* kinds of headers.
Dropping only the `Forwarded` header while passing through `X-Forwarded-*` (or the reverse) leaves the application open to the same spoofing through the other set.
Only headers added by a proxy you control should reach the application.

Once untrusted values are handled at the edge, the application server can be configured to apply the headers.
For example, Tomcat uses [`RemoteIpValve`](https://tomcat.apache.org/tomcat-10.1-doc/api/org/apache/catalina/valves/RemoteIpValve.html) and Jetty uses [`ForwardedRequestCustomizer`](https://eclipse.dev/jetty/javadoc/jetty-11/org/eclipse/jetty/server/ForwardedRequestCustomizer.html).
Alternatively, Spring users can use [`ForwardedHeaderFilter`](https://docs.spring.io/spring-framework/reference/web/webmvc/filters.html#filters-forwarded-headers) with the Servlet stack or [`ForwardedHeaderTransformer`](https://docs.spring.io/spring-framework/reference/web/webflux/reactive-spring.html#webflux-forwarded-headers) with the Reactive stack.
Both handle the `Forwarded` header and the `X-Forwarded-*` headers, and both can be configured to remove the headers instead of applying them, which is useful when the application is not behind a proxy.

Spring Boot users can use the `server.forward-headers-strategy` property to configure the application.
See the [Spring Boot documentation](https://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#howto.webserver.use-behind-a-proxy-server) for further details.
